# sub-archive

./: .gitignore  Cargo.toml  README.md  archive.toml
archive/: Cargo.toml
archive/executor/: Cargo.toml
archive/executor/src/: lib.rs
archive/kafka/: Cargo.toml
archive/kafka/examples/: demo.rs
archive/kafka/src/: lib.rs  producer.rs
archive/notifier/: Cargo.toml
archive/notifier/src/: initializer.rs  lib.rs  notifier.rs
archive/postgres/: Cargo.toml
archive/postgres/examples/: demo.rs
archive/postgres/migrations/: 20210409090020_blocks_trigger.sql
archive/postgres/scripts/: clean_db.sh  create_db.sh
archive/postgres/src/: config.rs  lib.rs  model.rs
archive/postgres/src/database/: insert.rs  update.rs
archive/runtime/: Cargo.toml
archive/runtime/src/: lib.rs  mock.rs
archive/src/: config.rs
archive/traits/: Cargo.toml
archive/traits/src/: lib.rs  local_db.rs
archive/traits/src/readonly/: mod.rs  rocksdb.rs
cli/: Cargo.toml  build.rs
cli/src/: chain_spec.rs  cli.rs  command.rs  service.rs
client/archive/kafka/: Cargo.toml
client/archive/kafka/examples/: demo.rs
client/archive/kafka/scripts/: create_topics.sh  delete_topics.sh
client/archive/kafka/src/: config.rs  lib.rs  payload.rs  producer.rs
client/archive/postgres/: Cargo.toml
client/archive/postgres/examples/: demo.rs
client/archive/postgres/migrations/: 20210409032916_tables.sql  20210409084925_insert_new_block_fn.sql
client/archive/postgres/src/: config.rs  lib.rs  model.rs
client/archive/postgres/src/database/: insert.rs  mod.rs  query.rs  update.rs
client/common/: Cargo.toml
client/common/src/: config.rs  error.rs
client/core/executor/: Cargo.toml
client/core/executor/src/: lib.rs  version_cache.rs
client/core/notifier/: Cargo.toml
client/core/notifier/src/: comparer.rs  initializer.rs  notifier.rs
client/core/runtime/: Cargo.toml
client/core/runtime/src/: lib.rs  mock.rs
client/core/traits/: Cargo.toml
client/core/traits/src/: lib.rs  local_db.rs
client/service/: Cargo.toml
client/service/src/: builder.rs  lib.rs  notifies.rs
client/service/src/client/: block_rules.rs  call_executor.rs  client.rs  mod.rs  wasm_override.rs
executor/: Cargo.toml
executor/src/: lib.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: constants.rs  lib.rs
