[[bin]]
name = "archive"
path = "src/main.rs"

[package]
name = "archive"
version = "0.1.0"
authors = ["Patract <https://github.com/patractlabs>"]
edition = "2018"
description = "A archive client of Substrate."

[dependencies]
cli = { package = "archive-cli", path = "./cli" }

[workspace]
members = [
  "cli",
  "primitives",
  "executor",
  "runtime",
  "client/common",
  "client/service",
  "client/archive/kafka",
  "client/archive/postgres",
  "client/core/executor",
  "client/core/notifier",
  "client/core/runtime",
  "client/core/traits",
]

[profile.release]
panic = "unwind"
