[[bin]]
name = "archive"
path = "src/main.rs"

[package]
name = "patract-archive"
version = "0.1.0"
authors = ["Patract <https://github.com/patractlabs>"]
edition = "2018"
description = "A archive client of Substrate."

[dependencies]
cli = { package = "archive-cli", path = "./cli" }

[workspace]
members = [
  "cli",
  "primitives",
  "executor",
  "runtime",
  "archive",
  "archive/kafka",
  "archive/postgres",
  "archive/executor",
  "archive/notifier",
  "archive/runtime",
  "archive/traits",
  "client/service",
]

[profile.release]
panic = "unwind"
