[package]
name = "ac-common"
version = "0.1.0"
authors = ["Patract <https://github.com/patractlabs>"]
edition = "2018"

[dependencies]
log = "0.4"
structopt = "0.3"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }

sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }

ac-traits = { path = "./traits" }
archive-postgres = { path = "./postgres" }
archive-kafka = { path = "./kafka" }
