[package]
name = "archive-cli"
version = "0.1.0"
authors = ["Patract <https://github.com/patractlabs>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
structopt = "0.3"
serde_json = "1.0"
log = "0.4"
codec = { package = "parity-scale-codec", version = "2.0.0" }
serde = { version = "1.0", features = ["derive"] }
futures = { version = "0.3", features = ["compat"] }
jsonrpc-core = "15.1.0"
num-traits = "0.2.14"

sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", features = ["wasmtime"] }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", features = ["wasmtime"] }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", features = ["wasmtime"] }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sc-state-db = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }

sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }

grandpa-primitives = { package = "sp-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
pallet-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }

ac-service = { default-features = false, path = "../client/service" }
ac-traits = { path = "../client/core/traits" }
ac-executor = { path = "../client/core/executor" }
ac-notifier = { path = "../client/core/notifier" }
ac-common = { path = "../client/common" }
ac-runtime = { path = "../client/core/runtime" }

archive-primitives = { path = "../primitives" }
archive-runtime = { path = "../runtime" }
archive-executor = { path = "../executor" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
