[package]
name = "archive-runtime"
version = "0.1.0"
authors = ["Patract <https://github.com/patractlabs>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0", optional = true }
static_assertions = "1.1"
hex-literal = { version = "0.3", optional = true }
log = { version = "0.4", default-features = false }

sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false }

frame-executive = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false }
#pallet-contracts = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false }
#pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false }
pallet-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false }
pallet-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false }

archive-primitives = { path = "../primitives" }

[features]
default = ["std"]
std = [
  "codec/std",
  "serde",
  "log/std",

  "sp-api/std",
  "sp-block-builder/std",
  "sp-consensus-babe/std",
  "sp-core/std",
  "sp-inherents/std",
  "sp-runtime/std",
  "sp-session/std",
  "sp-std/std",
  "sp-version/std",
  
  "frame-executive/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-babe/std",
  "pallet-balances/std",
#  "pallet-contracts/std",
#  "pallet-contracts-primitives/std",
  "pallet-grandpa/std",
  "pallet-session/std",
  "pallet-sudo/std",
  "pallet-timestamp/std",
  
  "archive-primitives/std",
]

