[package]
name = "archive-kafka"
version = "0.1.0"
authors = ["Patract <https://github.com/patractlabs>"]
edition = "2018"

[dependencies]
async-trait = "0.1"
log = "0.4"
rdkafka = { version = "0.26", features = ["cmake-build"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }

[dev-dependencies]
env_logger = "0.8"
tokio = { version = "1.4", features = ["macros", "rt-multi-thread"] }
