[package]
name = "ac-traits"
version = "0.1.0"
authors = ["Patract <https://github.com/patractlabs>"]
edition = "2018"

[dependencies]
log = "0.4"
async-trait = "0.1"
codec = { package = "parity-scale-codec", version = "2.0.0" }
serde = { version = "1.0", features = ["derive"] }

kvdb = "0.9"
kvdb-rocksdb = "0.11"
hash-db = "0.15"
memory-db = "0.26"
parking_lot = "0.11.1"

sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-database = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }

sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false }
sc-state-db = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false }
