[package]
name = "ac-common"
version = "0.1.0"
authors = ["zqhxuyuan <zqhxuyuan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
structopt = "0.3.8"
toml = "0.5"
serde = { version = "1.0.125", features = ["derive"] }

archive-postgres = { path = "../archive/postgres" }
archive-kafka = { path = "../archive/kafka" }

sc-cli = { version = "0.9.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }

sp-blockchain = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
