[package]
name = "ac-service"
version = "0.9.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "Substrate service. Starts a thread that spins up the network, client, and extrinsic pool. Manages communication between them."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["db"]
db = ["sc-client-db/with-kvdb-rocksdb", "sc-client-db/with-parity-db"]
wasmtime = ["sc-executor/wasmtime"]

[dependencies]
thiserror = "1.0.21"
futures01 = { package = "futures", version = "0.1.29" }
futures = { version = "0.3.4", features = ["compat"] }
#jsonrpc-pubsub = "15.1"
#jsonrpc-core = "15.1"
rand = "0.7.3"
parking_lot = "0.11.1"
lazy_static = "1.4.0"
log = "0.4.11"
futures-timer = "3.0.1"
wasm-timer = "0.2"
exit-future = "0.2.0"
pin-project = "1.0.4"
hash-db = "0.15.2"
serde = "1.0.101"
serde_json = "1.0.41"
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive", "full"]}

ac-runtime = { path = "../core/runtime" }
ac-traits = { path = "../core/traits" }
ac-executor = { path = "../core/executor" }
ac-common = { path = "../common" }

archive-postgres = { path = "../archive/postgres" }
archive-kafka = { path = "../archive/kafka" }

tokio = { version = "1.4", features = ["macros", "rt-multi-thread"] }
serde_bytes = "0.11"
hex = "0.4.3"
arc-swap = "1.2.0"
hashbrown = { version = "0.9", features = ["inline-more"] }
async-trait = "0.1.42"

sp-api = { git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.2" }
sp-io = { git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.2" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.2" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.2" }
sp-externalities = { git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.2" }
sp-utils = { git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.2" }
sp-version = { git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.2" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.2" }
sp-core = { git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.2" }
sp-session = { git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.2" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.2" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.2" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.2" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.2" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.2" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.2" }
sp-wasm-interface = { git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.2" }

sc-client-api = { git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.2" }
sc-client-db = { default-features = false, git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.2" }
sc-network = { git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.2" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.2" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.2" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.2" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.2" }
sc-service = { git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.2" }
sc-light = { git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.2" }

prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.2", version = "0.9.0"}
tracing = "0.1.25"
tracing-futures = { version = "0.2.4" }

frame-executive = { git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.2" }
frame-support = { git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.2" }
pallet-grandpa = { git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.2" }
pallet-babe = { git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.2" }

#sp-authority-discovery = {  git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.2" }
#sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.2" }
#sp-keystore = { git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.2" }
#sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.2" }
#sc-keystore = { git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.2" }
#sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.2" }
#sc-rpc-server = { git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.2" }
#sc-rpc = { git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.2" }
#sc-informant = { git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.2" }
#sc-offchain = {  git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.2" }
#sc-tracing = { git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.2" }
#sp-tracing = { git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.2" }

[target.'cfg(not(target_os = "unknown"))'.dependencies]
tempfile = "3.1.0"
directories = "3.0.1"

#[dev-dependencies]
#grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.2" }
#grandpa-primitives = { package = "sp-finality-grandpa", git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.2" }
#async-std = { version = "1.6.5", default-features = false }
