[package]
name = "archive-kafka"
version = "0.1.0"
authors = ["Patract <https://github.com/patractlabs>"]
edition = "2018"

[dependencies]
async-trait = "0.1"
log = "0.4"
rdkafka = { version = "0.26", features = ["cmake-build"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

#sp-core = "3.0"
#sp-runtime = "3.0"
#sp-storage = "3.0"
sp-core = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-runtime = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-storage = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }

[dev-dependencies]
env_logger = "0.8"
tokio = { version = "1.4", features = ["macros", "rt-multi-thread"] }
