[package]
name = "ac-executor"
version = "0.1.0"
authors = ["Patract <https://github.com/patractlabs>"]
edition = "2018"

[dependencies]
log = "0.4.11"
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive", "full"]}
serde = "1.0.101"
serde_json = "1.0.41"
arc-swap = "1.2.0"
hashbrown = { version = "0.9", features = ["inline-more"] }
futures = { version = "0.3.1", features = ["thread-pool"] }
futures-timer = "3.0.1"
async-trait = "0.1.42"

sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-wasm-interface = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }

ac-runtime = { path = "../runtime" }
ac-traits = { path = "../traits" }

archive-postgres = { path = "../../archive/postgres" }
archive-kafka = { path = "../../archive/kafka" }
