[package]
name = "ac-notifier"
version = "0.1.0"
authors = ["Patract <https://github.com/patractlabs>"]
edition = "2018"

[dependencies]
log = "0.4.11"
futures = { version = "0.3.1", features = ["thread-pool"] }
futures-timer = "3.0.1"
timer = "0.2.0"
chrono = "0.4"

sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }

ac-executor = { path = "../../core/executor" }
ac-common = { path = "../../common" }

archive-postgres = { path = "../../archive/postgres" }
archive-kafka = { path = "../../archive/kafka" }
