[package]
name = "ac-runtime"
version = "0.1.0"
authors = ["zqhxuyuan <zqhxuyuan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.21"
futures01 = { package = "futures", version = "0.1.29" }
futures = { version = "0.3.4", features = ["compat"] }
rand = "0.7.3"
parking_lot = "0.11.1"
lazy_static = "1.4.0"
log = "0.4.11"
futures-timer = "3.0.1"
wasm-timer = "0.2"
exit-future = "0.2.0"
pin-project = "1.0.4"
hash-db = "0.15.2"
serde = "1.0.101"
serde_json = "1.0.41"
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive", "full"]}

tokio = { version = "1.4", features = ["macros", "rt-multi-thread"] }
serde_bytes = "0.11"
hex = "0.4.3"
arc-swap = "1.2.0"
hashbrown = { version = "0.9", features = ["inline-more"] }
async-trait = "0.1.42"

sp-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-io = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-runtime = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-trie = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-externalities = { version = "0.9.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-utils = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-version = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-blockchain = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-core = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-session = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-state-machine = { version = "0.9.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-storage = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-consensus = { version = "0.9.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-inherents = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-block-builder = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-consensus-babe = { version = "0.9.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-wasm-interface = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev = "22193e0" }

sc-client-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sc-client-db = { version = "0.9.0", default-features = false, git = "https://github.com/paritytech/substrate", rev="22193e0" }
sc-network = { version = "0.9.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sc-chain-spec = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sc-executor = { version = "0.9.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sc-block-builder = { version = "0.9.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sc-telemetry = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sc-service = { version = "0.9.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sc-light = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }

prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", rev="22193e0", version = "0.9.0"}
tracing = "0.1.25"
tracing-futures = { version = "0.2.4" }

frame-executive = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
frame-support = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
pallet-grandpa = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
pallet-babe = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }